# git-fundamentals-course

./: .gitignore  README.md  config.json
data/: glossary.json  troubleshooting.json
labs/LAB-01-bootstrap-de-project/: README.md  verify.sh
labs/LAB-01-bootstrap-de-project/.expected/: git-log.txt
labs/LAB-01-bootstrap-de-project/templates/: .gitignore  .pre-commit-config.yaml  README.template.md  pyproject.toml
labs/LAB-02-rebase-conflicts/: README.md  expected.md  hints.md  setup.sh  verify.sh
labs/LAB-03-pr-review-simulation/: README.md  expected-review.md  review-template.md
labs/LAB-03-pr-review-simulation/author-response/: expected-response.md  my_code.py  response-template.md  review-comments.md
labs/LAB-03-pr-review-simulation/teammate-pr/: PR_DESCRIPTION.md  diff.patch  schema.yml
labs/LAB-03-pr-review-simulation/teammate-pr/models/: fct_customer_orders.sql
labs/LAB-04-capstone-de-workflow/: README.md
labs/LAB-04-capstone-de-workflow/expected-pr/: PR_BODY.md  README.md  REVIEW_COMMENTS.md  dags_README_addition.md  test_user_events.py  user_events_dag.py
labs/LAB-04-capstone-de-workflow/mock-repo/: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
labs/LAB-04-capstone-de-workflow/mock-repo/.github/: CODEOWNERS
labs/LAB-04-capstone-de-workflow/mock-repo/.github/workflows/: ci.yml
labs/LAB-04-capstone-de-workflow/mock-repo/dags/: README.md  analytics_main_etl_dag.py  campaign_data_dag.py  fact_orders_dag.py
labs/LAB-04-capstone-de-workflow/mock-repo/dags/shared/: __init__.py  s3_utils.py  secret_helpers.py  snowflake_loaders.py
labs/LAB-04-capstone-de-workflow/mock-repo/tests/: conftest.py  test_fact_orders.py
src/content/course/00-course-intro/: 01-about-course.mdx  02-course-overview.mdx  03-how-to-study.mdx
src/content/course/01-what-is-git/: 01-vcs-history.mdx  02-distributed-vs-centralized.mdx  03-snapshots-vs-deltas.mdx  04-why-git-won.mdx
(+194 files in other folders)
