[project]
name = "analytics-dags"
version = "0.1.0"
description = "Airflow DAGs for Acme Corp analytics"
requires-python = ">=3.13"
dependencies = [
    "apache-airflow[postgres,amazon,snowflake]==2.10.0",
]

[dependency-groups]
dev = [
    "pytest==8.0.0",
    "pytest-mock==3.12.0",
    "mypy==1.13.0",
    "ruff==0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E", "F", "I", "N", "UP", "B", "SIM", "ARG",
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
disallow_untyped_defs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --strict-markers"
